- Fixed bug #35660 (AIX TZ variable format not understood, yields UTC timezone).